# pasta

./: Cargo.toml  Contributions.md  LICENSE  Makefile  README.md  example.ps  fs.img  os  out.ppm  shapes.ppm  shutil  sys
docs/: TODO.txt  pasta_context.txt  project_tree.txt
docs/legacy_docs/: README1.txt  README2.txt  README3.txt  meatball_readme.txt  project_tree.txt  shell_readme.txt  typing_readme.txt
examples/: graphics_test.pasta  mandelbrot_gui.pasta
headers/: debug.ph  device.ph  ffi.ph  fs.ph  gc.ph  math.ph  memory.ph  net.ph  rand.ph  sys.ph  tensor.ph  thread.ph  time.ph
meatballs/agent/: Cargo.toml  agent.rs
meatballs/api/: meatball_api.rs  mod.rs
meatballs/cli/: cli.rs
meatballs/phase0/: objective.md
meatballs/runtime/: runtime.rs
meatballs/tests/: smoke.rs
src/: lib.rs  readline.rs
src/DiskImages/: fs.img
src/ai/: autograd.rs  datasets.rs  generate.rs  learn.rs  mod.rs  models.rs  tensor.rs  tokenizer.rs
src/interpreter/: ai_network.rs  environment.rs  errors.rs  ex_eval.rs  ex_eval.rs.txt  ex_frame.rs  executor.rs  executor.rs.bak_register_functions  executor.rs.txt  int_api.rs  int_api_tests.rs  mod.rs  mod.rs.txt  repl.rs  shell.rs
src/lexer/: alias.rs  lexer.rs  mod.rs  tokens.rs  unicode.rs
src/mod_loader/: mod.rs.txt  mod_api.rs  mod_load.rs  module_loader.conf
src/parser/: ast.rs  ast.rs.txt  grammar.rs  grammar.rs.txt  mod.rs  mod.rs.txt  parser.rs  parser.rs.bak_gfx_patch_20260316_184040  parser.rs.txt
src/pasta_async/: Cargo.toml
src/pasta_async/src/: api.rs  io.rs  lib.rs  runtime.rs  serialize.rs  sync.rs  testing.rs
src/runtime/: asm.rs  bitwise.rs.txt  device_ls.json  devices.rs  meatball.rs.bak  meatball.rs.txt  mod.rs.txt  rng.rs  scheduler.rs.txt  strainer.rs  strainer.rs.bak  threading.rs
src/saucey/: mod.rs  saucey.rs
src/semantics/: constraints.rs  mod.rs  mod.rs.txt  priority.rs  resolver.rs
src/stdlib/: debug.ph  device.ph  ffi.ph  fs.ph  gc.ph  lib.rs.txt  math.ph  memory.ph  mod.rs  net.ph  pasta_G.ph  rand.ph  stdio.ph  stdlib.pa  sys.ph  tensor.ph  thread.ph  time.ph
src/typing/: bool_coerce.rs  float.rs  int.rs  lib.rs  mod.rs  operands.rs  string_coerce.rs  tensor_type.rs  types.rs  util.rs
tests/: 01_arithmetic_bindings.ps  01_basic_print.ps  01_string_probe.ps  04_basic_while.ps  05_nested_while.ps  06_functions_and_lambdas.ps  07_do_multi_alias_repeat.ps  08_test_RET.ps  09_big_test.txt  10_full_suite.ps  10_small_test_30.ps  _gfx_smoke.ps  bubble_sort.ps  bubble_sort.ps.bak_20260316_163326  lex_range.rs  mand_test.ps  range_behavior.rs  rewrite_test.ps  test_advanced.ps  test_graphic.pasta  test_shapes.ps  test_suite.ps
tools/: CHEWME.sh  REBUILD_CHAIN_TOOL.sh  add_window_save.pl  bootstrap_tooling.py  chewer.py  chewer.sh  chewme.sh  fix_move_from_impls.pl  insert_builtin_debug.pl  install_pasta.sh  make_graphics_case_insensitive.pl  make_pasta_skill.py  make_pasta_skill.sh  normalize_builtin_name.pl  normalize_builtin_name_fixed.pl  output_dir_tree.py  patch_executor_graphics.pl  patch_executor_graphics_fixed.pl  patcher.py  perllogfix.pl  pipeline_build_skels.py  split_text.sh
(+54 files in other folders)
