[package]
name = "pasta_async"
version = "0.1.0"
edition = "2024"
authors = ["Travis Garrison <brainboy2487@gmail.com>"]
description = "Async helpers for PASTA"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.6"
